  - #4492, Fix ST_Simplify ignoring the value of the 3rd parameter (Raúl Marín)
  - #4494, Fix ST_Simplify output having an outdated bbox (Raúl Marín)
  - #4493, Fix ST_RemoveRepeatedPoints output having an outdated bbox (Raúl Marín)
  - #4495, Fix ST_SnapToGrid output having an outdated bbox (Raúl Marín)
  - #4506, Remove tolerance in point-in-ring stabline tests (Paul Ramsey)


PostGIS 2.4.8
2019/08/11

  * Bug Fixes and Enhancements *

  - #4361, Fix postgis_type_name with (GEOMETRYM,3) (Matt Bretl)
  - #4326, Fix circular arc distance calculation (Paul Ramsey)
  - #4388, AddRasterConstraints: Ignore NULLs when generating constraints (Raúl Marín)
  - #4327, Avoid pfree'ing the result of getenv (Raúl Marín)
  - #4406, Throw on invalid characters when decoding geohash (Raúl Marín)
  - #4440, Internal type lookups fail over FDW (Paul Ramsey)
  - #4445, Fix bug in lwgeom_le (Raúl Marín)
  - #4466, Fix undefined behaviour in _postgis_gserialized_stats (Raúl Marín)
  - #4209, Handle NULL geometry values in pgsql2shp (Paul Ramsey)
  - #4419, Use protobuf version to enable/disable mvt/geobuf (Paul Ramsey)
  - #4437, Handle POINT EMPTY in shape loader/dumper (Paul Ramsey)
  - #4461, ST_AsTWKB doesn't always remove duplicate points (Nicklas Avén)
  - #4470, ST_GeomFromGeoJSON crash on empty rings (Darafei Praliaskouski)
  - #4420, update path does not exists for address_standardizer extension (Regina Obe)


PostGIS 2.4.7
2019/03/11

  * Bug Fixes and Enhancements *

  - #4139, Make mixed-dimension ND index build tree correctly.
  WARNING: REINDEX your ND index on tables that have records with different M/Z
           dimensions for &&& operator to work predictably.
           (Darafei Praliaskouski, Arthur Lesuisse, Andrew Gierth, Raúl Marín)
  - #4273, Tighter parsing of WKT (Paul Ramsey)
  - #4267, Enable Proj 6 deprecated APIs (Darafei Praliaskouski, Raúl Marín)
  - #4290, More robust distance calculations in geography (Paul Ramsey)