@@ -9,19 +9,19 @@ SET client_min_messages TO NOTICE;
 insert into t(g) values ('LINESTRING(-10 -50, 20 30)');
 
 -- #877.3
-with e as ( select ST_EstimatedExtent('t','g') as e )
+with e as ( select ST_EstimatedExtent('t','g') as e offset 0)
 select '#877.3', round(st_xmin(e.e)::numeric, 5), round(st_xmax(e.e)::numeric, 5),
 round(st_ymin(e.e)::numeric, 5), round(st_ymax(e.e)::numeric, 5) from e;
 
 -- #877.4
 analyze t;
-with e as ( select ST_EstimatedExtent('t','g') as e )
+with e as ( select ST_EstimatedExtent('t','g') as e offset 0)
 select '#877.4', round(st_xmin(e.e)::numeric, 5), round(st_xmax(e.e)::numeric, 5),
 round(st_ymin(e.e)::numeric, 5), round(st_ymax(e.e)::numeric, 5) from e;
 
 -- #877.5
 truncate t;
-with e as ( select ST_EstimatedExtent('t','g') as e )
+with e as ( select ST_EstimatedExtent('t','g') as e offset 0)
 select '#877.5', round(st_xmin(e.e)::numeric, 5), round(st_xmax(e.e)::numeric, 5),
 round(st_ymin(e.e)::numeric, 5), round(st_ymax(e.e)::numeric, 5) from e;
 drop table t;
@@ -39,17 +39,17 @@ analyze p;
 
 
 -- #3391.1
-with e as ( select ST_EstimatedExtent('c1','g') as e )
+with e as ( select ST_EstimatedExtent('c1','g') as e offset 0)
 select '#3391.1', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.2
-with e as ( select ST_EstimatedExtent('c2','g') as e )
+with e as ( select ST_EstimatedExtent('c2','g') as e offset 0)
 select '#3391.2', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.3
-with e as ( select ST_EstimatedExtent('p','g') as e )
+with e as ( select ST_EstimatedExtent('p','g') as e offset 0)
 select '#3391.3', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
@@ -62,17 +62,17 @@ analyze c2;
 analyze p;
 
 -- #3391.4
-with e as ( select ST_EstimatedExtent('c1','g') as e )
+with e as ( select ST_EstimatedExtent('c1','g') as e offset 0)
 select '#3391.4', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.5
-with e as ( select ST_EstimatedExtent('c2','g') as e )
+with e as ( select ST_EstimatedExtent('c2','g') as e offset 0)
 select '#3391.5', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.6
-with e as ( select ST_EstimatedExtent('p','g') as e )
+with e as ( select ST_EstimatedExtent('p','g') as e offset 0)
 select '#3391.6', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
@@ -85,17 +85,17 @@ analyze c2;
 analyze p;
 
 -- #3391.7
-with e as ( select ST_EstimatedExtent('c1','g') as e )
+with e as ( select ST_EstimatedExtent('c1','g') as e offset 0)
 select '#3391.7', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.8
-with e as ( select ST_EstimatedExtent('c2','g') as e )
+with e as ( select ST_EstimatedExtent('c2','g') as e offset 0)
 select '#3391.8', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.9
-with e as ( select ST_EstimatedExtent('p','g') as e )
+with e as ( select ST_EstimatedExtent('p','g') as e offset 0)
 select '#3391.9', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
@@ -108,17 +108,17 @@ analyze c2;
 analyze p;
 
 -- #3391.10
-with e as ( select ST_EstimatedExtent('c1','g') as e )
+with e as ( select ST_EstimatedExtent('c1','g') as e offset 0)
 select '#3391.10', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.11
-with e as ( select ST_EstimatedExtent('c2','g') as e )
+with e as ( select ST_EstimatedExtent('c2','g') as e offset 0)
 select '#3391.11', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.12
-with e as ( select ST_EstimatedExtent('p','g') as e )
+with e as ( select ST_EstimatedExtent('p','g') as e offset 0)
 select '#3391.12', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
@@ -138,22 +138,22 @@ analyze p;
 
 
 -- #3391.13
-with e as ( select ST_EstimatedExtent('public','p','g','t') as e )
+with e as ( select ST_EstimatedExtent('public','p','g','t') as e offset 0)
 select '#3391.13', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.14
-with e as ( select ST_EstimatedExtent('public','p','g','f') as e )
+with e as ( select ST_EstimatedExtent('public','p','g','f') as e offset 0)
 select '#3391.14', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.15
-with e as ( select ST_EstimatedExtent('public','c1','g', 't') as e )
+with e as ( select ST_EstimatedExtent('public','c1','g', 't') as e offset 0)
 select '#3391.15', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.16
-with e as ( select ST_EstimatedExtent('public','c1','g', 'f') as e )
+with e as ( select ST_EstimatedExtent('public','c1','g', 'f') as e offset 0)
 select '#3391.16', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
@@ -166,22 +166,22 @@ analyze c2;
 analyze p;
 
 -- #3391.17
-with e as ( select ST_EstimatedExtent('public','p','g','f') as e )
+with e as ( select ST_EstimatedExtent('public','p','g','f') as e offset 0)
 select '#3391.17', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.18
-with e as ( select ST_EstimatedExtent('public','p','g','t') as e )
+with e as ( select ST_EstimatedExtent('public','p','g','t') as e offset 0)
 select '#3391.18', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.19
-with e as ( select ST_EstimatedExtent('public','c1','g', 'f') as e )
+with e as ( select ST_EstimatedExtent('public','c1','g', 'f') as e offset 0)
 select '#3391.19', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
 -- #3391.20
-with e as ( select ST_EstimatedExtent('public','c1','g', 't') as e )
+with e as ( select ST_EstimatedExtent('public','c1','g', 't') as e offset 0)
 select '#3391.20', round(st_xmin(e.e)::numeric, 2), round(st_xmax(e.e)::numeric, 2),
 round(st_ymin(e.e)::numeric, 2), round(st_ymax(e.e)::numeric, 2) from e;
 
