@@ -124,7 +124,10 @@ $ENV{"LC_ALL"} = "C";
 $ENV{"LANG"} = "C";
 
 # Add locale info to the psql options
-my $PGOPTIONS = $ENV{"PGOPTIONS"} . " -c lc_messages=C -c client_min_messages=NOTICE";
+my $PGOPTIONS = $ENV{"PGOPTIONS"};
+$PGOPTIONS .= " -c lc_messages=C";
+$PGOPTIONS .= " -c client_min_messages=NOTICE";
+$PGOPTIONS .= " -c extra_float_digits=0";
 $ENV{"PGOPTIONS"} = $PGOPTIONS;
 
 # Bring the path info in
